Corrected School spelling

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                               </tr>
                               <tr>
                                 <td>SSC</td>
-                                <td>Blue Bird School & College</td>
+                                <td>Blue Bird High School </td>
                                 <td>2016</td>
                                 <td>5.00</td>
                               </tr>
