--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I do love going outdoors. I like to go on photowalks and taking pictures. I do intend of learning video editing. And I definitely like long walks when my mind gets freezed. During summer I go for swimming.</p>
+                    <p>I do love going outdoors. I like to go on photowalks and taking pictures. I do intend to learn video editing. And I definitely like long walks when my mind gets freezed. During summer I go for swimming.</p>
                     <p class="mb-0">About staying indoors, I love reading books and novels, I sketch whenever I'm free. I do watch lots of movies. I guess I also love baking as I start baking whenever I feel I'm all weared out. For the past few days I'm loving, learning and exploring the latest technology advancements in the front-end development world.</p>
                 </div>
             </section>
