--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="section-title">
             <h2>Projects</h2>
             
-          <p>I've done few website designs which you'll find in my github. I've done few business cards, web template, cartoon and GIF with Photoshop. Made an app using flutter. Did front-end design of a website using raw HTML, CSS & JavaScript. Did a calculator project with JavaFx. Did a mini project in EMU8086. I also did a mini console based C++ project where two people dares each other with user input math questions. The picture if these are given below. </p>
+          <p>I've done few website designs which you'll find in my github. I've done few business cards, web template, cartoon and GIF with Photoshop. Made an app using flutter. Did front-end design of a website using raw HTML, CSS & JavaScript. Did a calculator project with JavaFx. Did a mini project in EMU8086. I also did a mini console based C++ project where two people dares each other with user input math questions. The picture if these are given below. As for my final year project I've made an inter university bus management system. </p>
         </div>
   
           <div class="row" data-aos="fade-up">
